# distopt

./: .gitignore  README.md
log/: latest_test
src/dist_ba/: CMakeLists.txt  install_dependencies.sh  run_async_job.sbatch
src/dist_ba/include/distributed_bundle_adjustment/: asynchronous_communication.hpp  data.hpp  equidistant_distortion.hpp  pinhole_camera.hpp
src/dist_ba/include/distributed_bundle_adjustment/cost_functions/: reprojection_error.hpp
src/dist_ba/src/: main_async.cpp  main_central_async.cpp  main_central_ba.cpp  main_eval.cpp  main_mpi_eval.cpp  main_sync.cpp
src/dist_ba/src/distributed_bundle_adjustment/: camera.cpp  central_async_communication.cpp  central_communication.cpp  equidistant_distortion.cpp  frame.cpp  optimization.cpp
src/dist_ba/test/: test_camera.cpp  test_consensus_error.cpp
src/distopt/: CMakeLists.txt  package.xml
src/distopt/include/distopt/: asynchronous_communication.hpp  camera.hpp  common.hpp  crpt_clone.hpp  data.hpp  distortion.hpp  equidistant_distortion.hpp  frame.hpp  map_point.hpp  optimization.hpp  pinhole_camera.hpp  pose_graph.hpp  rad_distortion.hpp  radtan_distortion.hpp  simple_pinhole_camera.hpp
src/distopt/include/distopt/cost_functions/: central_consensus.hpp  decentral_consensus.hpp  reprojection_error.hpp  reprojection_error_impl.hpp
src/distopt/src/: agent_node.cpp  asynchronous_communication.cpp  camera.cpp  data.cpp  distortion.cpp  frame.cpp  main_decentral_async.cpp  map_point.cpp  optimization.cpp  pinhole_camera.cpp  rad_distortion.cpp  radtan_distortion.cpp  simple_pinhole_camera.cpp
src/distopt/src/cost_functions/: central_consensus.cpp  decentral_consensus.cpp
src/distopt/src/robopt_open/posegraph-error/: relative-distance.cpp
src/distopt_interface/: CMakeLists.txt  package.xml
src/distopt_interface/include/distributed_bundle_adjustment/: asynchronous_communication.hpp  data.hpp
src/distopt_interface/msg/: FrameDual.msg  Update.msg
src/distopt_interface/src/: main_decentral_async.cpp
src/distributed_ba/: .gitignore  CMakeLists.txt  README.md  config_flags  file_cleaning_script.py  hostfile  install_dependencies.sh  package.xml  run_decent_async_job.sbatch  run_sync_eval.sbatch  run_sync_job.sbatch
src/distributed_ba/include/distributed_bundle_adjustment/: asynchronous_communication.hpp  camera.hpp  central_async_communication.hpp  central_communication.hpp  common.hpp  distortion.hpp  frame.hpp  map_point.hpp  optimization.hpp  rad_distortion.hpp  radtan_distortion.hpp  simple_pinhole_camera.hpp  utils.hpp
src/distributed_ba/include/distributed_bundle_adjustment/cost_functions/: central_consensus_impl.hpp  decentral_consensus.hpp  decentral_consensus_impl.hpp
src/distributed_ba/src/: main_async.cpp  main_eval.cpp
src/distributed_ba/src/distributed_bundle_adjustment/: asynchronous_communication.cpp  data.cpp  distortion.cpp  frame.cpp  map_point.cpp  optimization.cpp  rad_distortion.cpp  radtan_distortion.cpp  simple_pinhole_camera.cpp
src/distributed_ba/src/distributed_bundle_adjustment/cost_functions/: central_consensus.cpp  decentral_consensus.cpp
src/distributed_ba/test/: compute_reprojection_error.m  projectPoint.m  test_camera.cpp  test_distortion.cpp  test_reprojection_error.cpp
src/eigen_checks/: CMakeLists.txt
src/eigen_checks/test/: test_glog-equal-double.cc  test_glog-equal.cc  test_glog-near.cc  test_gtest-equal-double.cc
src/robopt_open/: CMakeLists.txt  package.xml
