<?xml version="1.0"?>
<package>
  <name>robopt_open</name>
  <version>0.5.0</version>
  <description>ETHZ V4RL Optimization Library for Problems in Robotics</description>

  <maintainer email="karrerm@ethz.ch"> </maintainer>

  <license>??</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>eigen_checks</depend>
  <build_depend>gflags_catkin</build_depend>
  <build_depend>glog_catkin</build_depend>
  <build_depend>ceres_catkin</build_depend> 

  <!-- <build_depend>cmake_modules</build_depend>
  <build_depend>eigen_checks</build_depend>
  <build_depend>gflags_catkin</build_depend>
  <build_depend>glog_catkin</build_depend>
  <build_depend>ceres_catkin</build_depend> 
  <build_depend>aslam_cv_cameras</build_depend> -->

  <!-- <run_depend>cmake_modules</run_depend>
  <run_depend>ceres_catkin</run_depend>
  <run_depend>aslam_cv_cameras</run_depend> -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <test_depend>rosunit</test_depend>
  <export>
  </export>
</package>
